tests/snapshots/cli_snapshots__get_snapshots__get_shape_json.snap
---
source: tests/cli_snapshots.rs
expression: json
---
{
  "amendment_log": [
    1
  ],
  "children": [
    {
      "role": "feature",
      "shape": 2
    }
  ],
  "constraints": [
    1,
    2
  ],
  "description": "Fixture parent shape used by CLI snapshot tests.",
  "id": 1,
  "intent": {
    "goals": "exist as a parent shape for the snapshot fixture",
    "kind": "module",
    "rationale": "gives the seed fixture a deterministic shape-DAG parent",
    "source": "ai",
    "summary": "fixture parent"
  },
  "name": "Parent",
  "profile": 1,
  "status": "proposed"
}
